--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "placeholder-gen",
-  "version": "0.0.2",
-  "description": "Generate placeholder SVG images with a given width, height and colour.",
+  "version": "0.1.0",
+  "description": "Generate placeholder images (SVG or PNG) with a given width, height and colour.",
   "main": "placeholders.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Finn Bacall",
   "license": "BSD-2-Clause",
-  "dependencies": { }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fbacall/placeholder-gen"
+  },
+  "dependencies": {
+    "rsvg": "~0.2.5"
+  }
 }
