--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "url": "https://github.com/fbacall/placeholder-gen"
   },
   "dependencies": {
-    "rsvg": "~0.2.5"
+    "librsvg": "~0.6.1"
   }
 }
