--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "url": "https://github.com/fbacall/placeholder-gen"
   },
   "dependencies": {
-    "librsvg": "~0.6.1"
+    "svg2img": "^0.9.3"
   }
 }
